# Pathfinders

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  Untitled.ipynb  bfsi.cpp  dependent.cpp  dfsi.cpp  example.ipynb  jj.py  path.cpp  pathfinders.py  pyproject.toml  setup.cfg  setup.py
.ipynb_checkpoints/: Untitled-checkpoint.ipynb  example-checkpoint.ipynb  ggggg-checkpoint.ipynb
docs/: conf.py
src/: bfsi.cpp  dfsi.cpp  main.cpp  path.cpp  pathfinders.py
src/pathfinders/: __init__.py
src/pathfinders.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_package.py
